# src/api/swagger.yaml
@@ -159,7 +159,7 @@ paths:
               password: "SecurePass123!"
               role: "attendee"
       responses:
-        201:
+        200:
           description: Volunteer registered
           content:
             application/json:
@@ -429,7 +429,7 @@ paths:
               collection_date: "2024-06-25"
               collection_place: "Marseille"
       responses:
-        201:
+        200:
           description: Created
           content:
             application/json:
@@ -733,7 +733,7 @@ paths:
               garbage_type: "Plastic"
               quantity_kg: 2.5
       responses:
-        201:
+        200:
           description: Created
           content:
             application/json:
@@ -1036,7 +1036,7 @@ paths:
               password: "SuperSecret123"
               role: "attendee"
       responses:
-        201:
+        200:
           description: Created
           content:
             application/json:
@@ -1341,7 +1341,7 @@ paths:
               volunteer_id: 3
               collection_id: 2
       responses:
-        201:
+        200:
           description: Created
           content:
             application/json:
@@ -1633,7 +1633,7 @@ paths:
               issued_at: "2024-07-05T10:00:00Z"
               expires_at: "2024-07-05T11:00:00Z"
       responses:
-        201:
+        200:
           description: Created
           content:
             application/json:
@@ -1742,7 +1742,7 @@ paths:
           schema:
             type: string
       responses:
-        204:
+        200:
           description: Deleted successfully (no content)
           content:
             application/json:
